[tool.poetry]
name = "tech-docs-generator"
version = "0.1.0"
description = "AI-powered technical documentation generator using Streamlit and OpenAI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.38.0"
openai = "^1.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
